// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test case code emitter should append the snapshot of the setup and teardown hooks to the test case 1`] = `
Object {
  "function": "tests[\\"example test case\\"] = async (driver, vars, opts = {}) => {}",
  "id": "1",
  "name": "example test case",
  "test": "it(\\"example test case\\", async () => {setup codemore setupawait tests[\\"example test case\\"](driver, vars);expect(true).toBeTruthy();teardown codemore teardown});",
}
`;

exports[`test case code emitter should emit a test with a single command 1`] = `
Object {
  "function": "tests[\\"example test case\\"] = async (driver, vars, opts = {}) => {await driver.get((new URL(\`/\`, BASE_URL)).href);}",
  "id": "1",
  "name": "example test case",
  "test": "it(\\"example test case\\", async () => {await tests[\\"example test case\\"](driver, vars);expect(true).toBeTruthy();});",
}
`;

exports[`test case code emitter should emit a test with multiple commands 1`] = `
Object {
  "function": "tests[\\"example test case\\"] = async (driver, vars, opts = {}) => {await driver.get((new URL(\`/\`, BASE_URL)).href);await driver.get((new URL(\`/test\`, BASE_URL)).href);await driver.get((new URL(\`/example\`, BASE_URL)).href);}",
  "id": "1",
  "name": "example test case",
  "test": "it(\\"example test case\\", async () => {await tests[\\"example test case\\"](driver, vars);expect(true).toBeTruthy();});",
}
`;

exports[`test case code emitter should emit an empty test case 1`] = `
Object {
  "function": "tests[\\"example test case\\"] = async (driver, vars, opts = {}) => {}",
  "id": "1",
  "name": "example test case",
  "test": "it(\\"example test case\\", async () => {await tests[\\"example test case\\"](driver, vars);expect(true).toBeTruthy();});",
}
`;

exports[`test case code emitter should send the snapshot to the command 1`] = `
Object {
  "function": "tests[\\"example test case\\"] = async (driver, vars, opts = {}) => {command code}",
  "id": "1",
  "name": "example test case",
  "test": "it(\\"example test case\\", async () => {await tests[\\"example test case\\"](driver, vars);expect(true).toBeTruthy();});",
}
`;
